# Inventaris-with-QT

./: CMakeLists.txt  README.md  barang.cpp  barang.h  barangwindow.cpp  barangwindow.h  databasemanager.cpp  databasemanager.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  stockify.db  supplier.cpp  supplier.h  supplierwindow.cpp  supplierwindow.h  transaksi.cpp  transaksi.h
